--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/lowell1/node-db-challenge.git",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.20.1",
     "sqlite3": "^4.1.0"
   }
